few animations added

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
       </div>
     </div>
     </section>
+
+    <!-- Video and Features Section -->
+
     <section class="w-full flex flex-col" id="document-heading2">
       <div class="w-full flex px-24 py-16 gap-x-6 opacity-0" id="document-title">
         <div class="w-full">
@@ -72,7 +75,9 @@
         <h1 class="px-10 py-10 text-[#acd5ef] font-['Mitr'] text-6xl text-center hover:text-[#3A50B3] font-medium">Let’s make hygiene not only a priority but desirable too!</h1>
       </div>
     </section>
+
     <!-- Categories Section -->
+
     <section class="section_categories">
       <h1 class="px-24 text-[#3a50b3] text-[46px] font-['Mitr']">
         Refreshing natural Fragnances
@@ -98,9 +103,10 @@
          <img src="./public/green 3.svg"  class="absolute w-[503px] h-[432px] bottom-0 right-0" alt>
         </div>
       </div>
-
     </section>
+
     <!-- Image Gallery Section -->
+
     <section class="py-24 relative">
       <div class="swiper-container z-50">
         <div class="swiper-wrapper">
@@ -131,9 +137,9 @@
             </div>
         </div>
     </div>
-    <div class="bg-white relative bottom-20 h-40 w-full z-[100] rounded-[50%]"></div>
+    <div class="bg-white relative bottom-20 h-36 w-full z-[100] rounded-[50%]"></div>
     </section>
-  <section class="px-40 py-40">
+  <section class="px-40 py-36">
     <div class="w-full group" id="document-section">
       <div class="gap-x-40 flex justify-between opacity-0 transition-opacity duration-150 group-hover:opacity-100" id="document-heading1">
         <div class="flex flex-col gap-4">
