--- a/private-label.html
+++ b/private-label.html
@@ -44,7 +44,7 @@
     <title>Private Label</title>
   </head>
   <body>
-    <section class="flex flex-col items-center w-full overflow-hidden h-screen">
+    <section class="flex flex-col items-center w-full overflow-hidden h-screen py-10 relative">
       <div class="flex w-full items-center justify-between px-20 pt-10">
         <a href="index.html"><img src="./public/logo.svg" alt="" /></a>
         <nav class="flex items-center justify-center rounded-full">
@@ -84,20 +84,22 @@
           type="video/mp4"
         ></video>
       </div>
+    </section>
+    <section class="w-full flex relative py-20">
       <div
-        class="w-full flex absolute justify-between gap-x-10 px-16 py-10 items-end bottom-0"
+      class="w-full flex absolute justify-between gap-x-10 px-24 py-10 items-end bottom-0"
+    >
+      <h1 class="text-5xl text-nowrap font-['Mitr'] font-medium">
+        Make an unforgettable impression <br />
+        with Wicked Wipes
+      </h1>
+      <p
+        class="text-2xl bg-white rounded-lg px-10 py-16 bottom-0 font-medium shadow-lg"
       >
-        <h1 class="text-5xl text-nowrap font-['Mitr'] font-medium">
-          Make an unforgettable impression <br />
-          with Wicked Wipes
-        </h1>
-        <p
-          class="text-2xl bg-white rounded-lg px-10 py-16 bottom-0 font-medium shadow-lg"
-        >
-          Wow your customers and build your brand’s recall value with our unique
-          hand wipes
-        </p>
-      </div>
+        Wow your customers and build your brand’s recall value with our unique
+        hand wipes
+      </p>
+    </div>
     </section>
     <!-- One of a Kind Section -->
     <section class="px-28 py-20 w-full" id="document-one">
