How to USe Wicked Wipes Section Updated

--- a/features.html
+++ b/features.html
@@ -151,15 +151,58 @@
           </h1>
         </div>
         <div class="flex flex-col w-full">
-          <h1 class="text-white text-[46px] concert-one-regular font-medium">
-            Step 1
-          </h1>
+          <div class="w-2/4 mb-2">
+            <h2 class="text-white text-[46px] concert-one-regular font-medium">
+              STEP 1
+            </h2>
+            <div
+              class="p-2 bg-[#C1DFF3] rounded-full my-3 w-full hover:bg-[#97CAEB]"
+            ></div>
+          </div>
           <p class="text-xl text-white">
             Place the Wicked Wipes pod on the table. The product is made up of
             two parts - the dry compressed cloth hand wipe and the gentle
             cleansing formulation. The hand wipe is kept dry to maintain
             moisture and freshness.
           </p>
+        </div>
+      </div>
+      <div class="w-full flex py-28">
+        <div class="flex flex-col justify-evenly w-full">
+          <div class="w-2/4 my-2 flex flex-col justify-center">
+            <h2 class="text-white text-[46px] concert-one-regular font-normal">
+              STEP 2
+            </h2>
+            <div
+              class="p-2 bg-[#C1DFF3] rounded-full my-3 w-full hover:bg-[#97CAEB]"
+            ></div>
+          </div>
+          <div class="flex flex-col w-6/12 justify-center" style="background: radial-gradient(circle at center, #37A3F1 5%, #3A50B3 40%);">
+            <img src="/public/step2.1.png" alt="">
+            <img src="/public/step2.2.png" alt="">
+          </div>
+        </div>
+        <div class="flex flex-col justify-evenly w-full">
+          <div class="w-2/4 mb-2">
+            <h2 class="text-white text-[46px] concert-one-regular font-normal">
+              STEP 3
+            </h2>
+            <div
+              class="p-2 bg-[#C1DFF3] rounded-full my-3 w-full hover:bg-[#97CAEB]"
+            ></div>
+            <img src="/public/product-2.png" alt="" class="flex justify-end">
+          </div>
+        </div>
+        <div class="flex flex-col justify-evenly w-full">
+          <div class="w-2/4 mb-2">
+            <h2 class="text-white text-[46px] concert-one-regular font-normal">
+              STEP 4
+            </h2>
+            <div
+              class="p-2 bg-[#C1DFF3] rounded-full my-3 w-full hover:bg-[#97CAEB]"
+            ></div>
+            <img src="/public/product-3.png" alt="" class="">
+          </div>
         </div>
       </div>
     </section>
