--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
         <img src="./public/blue 2.svg" alt="">
         <img src="./public/white 3.svg" alt="">
       </div>
+      <div class="bg-[]">
+
+      </div>
       <div class="flex justify-between">
        <div class="flex">
         <h1 class=" px-32 py-20 text-[180px] text-[#3a50b3] concert-one-regular font-normal">
