--- a/features.html
+++ b/features.html
@@ -168,7 +168,16 @@
         </div>
       </div>
       <div class="w-full flex py-28">
-        <div class="flex flex-col justify-evenly w-full">
+        <div
+          class="flex flex-col justify-center items-center w-full"
+          style="
+            background: radial-gradient(
+              circle at center,
+              #37a3f1 1%,
+              #3a50b3 50%
+            );
+          "
+        >
           <div class="w-2/4 my-2 flex flex-col justify-center">
             <h2 class="text-white text-[46px] concert-one-regular font-normal">
               STEP 2
@@ -177,12 +186,21 @@
               class="p-2 bg-[#C1DFF3] rounded-full my-3 w-full hover:bg-[#97CAEB]"
             ></div>
           </div>
-          <div class="flex flex-col w-6/12 justify-center" style="background: radial-gradient(circle at center, #37A3F1 5%, #3A50B3 40%);">
-            <img src="/public/step2.1.png" alt="">
-            <img src="/public/step2.2.png" alt="">
+          <div class="flex flex-col w-6/12 justify-center">
+            <img src="/public/step2.1.png" alt="" />
+            <img src="/public/step2.2.png" alt="" />
           </div>
         </div>
-        <div class="flex flex-col justify-evenly w-full">
+        <div
+          class="flex flex-col justify-center items-center w-full"
+          style="
+            background: radial-gradient(
+              circle at center,
+              #37a3f1 1%,
+              #3a50b3 50%
+            );
+          "
+        >
           <div class="w-2/4 mb-2">
             <h2 class="text-white text-[46px] concert-one-regular font-normal">
               STEP 3
@@ -190,10 +208,23 @@
             <div
               class="p-2 bg-[#C1DFF3] rounded-full my-3 w-full hover:bg-[#97CAEB]"
             ></div>
-            <img src="/public/product-2.png" alt="" class="flex justify-end">
+            <img
+              src="/public/product-2.png"
+              alt=""
+              class="mt-96 flex justify-end"
+            />
           </div>
         </div>
-        <div class="flex flex-col justify-evenly w-full">
+        <div
+          class="flex flex-col justify-center items-center w-full"
+          style="
+            background: radial-gradient(
+              circle at center,
+              #37a3f1 1%,
+              #3a50b3 50%
+            );
+          "
+        >
           <div class="w-2/4 mb-2">
             <h2 class="text-white text-[46px] concert-one-regular font-normal">
               STEP 4
@@ -201,7 +232,7 @@
             <div
               class="p-2 bg-[#C1DFF3] rounded-full my-3 w-full hover:bg-[#97CAEB]"
             ></div>
-            <img src="/public/product-3.png" alt="" class="">
+            <img src="/public/product-3.png" alt="" class="mt-96" />
           </div>
         </div>
       </div>
