--- a/features.html
+++ b/features.html
@@ -53,7 +53,7 @@
   </head>
   <body>
     <section
-      class="flex flex-col items-center w-full overflow-hidden h-[1024px]" id="video-heading"
+      class="flex flex-col items-center w-full h-full" id="video-heading"
     >
       <div class="flex flex-col w-full justify-between relative">
         <div class="bg-[#3A50B3] absolute opacity-30 w-1/2 h-full"></div>
