--- a/index.html
+++ b/index.html
@@ -171,6 +171,99 @@
       </button>
     </div>
   </section>
+   <!-- Form Section -->
+   <section class="px-36 py-28 w-full">
+    <div class="flex w-full">
+      <div class="flex flex-col w-3/5 bg-[#3A50B3] p-20 shadow-md rounded-md">
+        <h1 class="text-white text-2xl font-['Urbanist'] font-bold">
+          Get in Touch with Us
+        </h1>
+        <h2 class="text-white text-xl font-['Urbanist'] font-bold">
+          to discuss your issues in Wicked Wipes
+        </h2>
+        <div class="w-full px-8 pt-24 flex gap-x-6">
+          <img src="/public/bxs_phone-call.svg" alt="" />
+          <div class="flex flex-col w-full">
+            <a href="tel:+12898372548" class="text-white">+1 289 837 2548</a>
+            <a href="tel:+12898372547" class="text-white">+1 289 837 2547</a>
+          </div>
+        </div>
+        <div class="w-full px-8 pt-24 flex gap-x-6">
+          <img src="/public/carbon_location-filled.svg" alt="" />
+          <div class="flex flex-col w-full">
+            <p class="text-white">
+              2030 Bristol Circle, Suite 210,<br />
+              Oakville, ON - L6H 0H2
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="flex flex-col w-full shadow-md rounded-md p-10">
+        <form action="" class="w-full flex flex-col gap-y-6">
+          <div class="flex justify-between w-full gap-x-6">
+            <input
+              type="text"
+              label="First Name"
+              id="fname"
+              placeholder="First Name"
+              name="fname"
+              class="form"
+            />
+            <input
+              type="text"
+              label="Last Name"
+              id="lname"
+              placeholder="Last Name"
+              name="fname"
+              class="form"
+            />
+          </div>
+          <div class="flex justify-between w-full gap-x-6">
+            <input
+              type="email"
+              label="Business Email"
+              id="bemail"
+              placeholder="Business Email"
+              name="fname"
+              class="form"
+            />
+            <input
+              type="tel"
+              label="Phone Number"
+              id="pnum"
+              placeholder="Phone Number"
+              name="fname"
+              class="form"
+            />
+          </div>
+
+          <input
+            type="text"
+            label="Company Name"
+            id="company"
+            placeholder="Company Name"
+            name="cname"
+            class="form"
+          />
+          <input
+            type="tel"
+            label="Message"
+            id="message"
+            placeholder="Message"
+            name="msg"
+            class="form"
+          />
+        </form>
+        <div class="w-full flex justify-end">
+          <button
+            class="flex justify-center w-1/2 text-white text-base font-medium bg-[#3A50B3] hover:bg-blue-700 rounded-md mt-28 py-4"
+          >
+            Send Message
+          </button>
+        </div>
+      </div>
+    </div>
+  </section>
       <!-- Footer Section-->
       <section>
         <div class="bg-[#3A50B3] px-16 py-10  flex justify-between">
