--- a/testimonials.html
+++ b/testimonials.html
@@ -29,7 +29,7 @@
       href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap"
       rel="stylesheet"
     />
-    <title>Who we are</title>
+    <title>Testimonials</title>
   </head>
   <body>
     <!-- Header Section -->
