--- a/features.html
+++ b/features.html
@@ -190,7 +190,7 @@
         <div class="flex flex-col w-full">
           <div class="w-2/4 mb-2">
             <h2 class="text-white text-[46px] concert-one-regular font-medium">
-              STEP 1cajdjdbcjkdac
+              STEP 1
             </h2>
             <div
               class="p-2 bg-[#C1DFF3] rounded-full my-3 w-full hover:bg-[#97CAEB]"
