Features Section Added Animation to characteristics section

--- a/features.html
+++ b/features.html
@@ -77,10 +77,12 @@
           </h2>
         </div>
         <div
-          class="absolute rounded-full w-96 h-96 bg-[#37a3f1] top-56 left-24 blur-2xl opacity-50" id="round-1"
+          class="absolute rounded-full w-96 h-96 bg-[#37a3f1] top-56 left-24 blur-2xl opacity-50"
+          id="round-1"
         ></div>
         <div
-          class="absolute rounded-full w-64 h-64 bg-[#37a3f1] bottom-20 left-[550px] blur-2xl opacity-50" id="round-2"
+          class="absolute rounded-full w-64 h-64 bg-[#37a3f1] bottom-20 left-[550px] blur-2xl opacity-50"
+          id="round-2"
         ></div>
         <video
           class="w-full object-cover"
@@ -312,106 +314,108 @@
     </section>
     <!-- Features Section -->
     <section class="px-24 py-36" id="features">
-      <div class="flex w-full justify-center items-center">
-        <div class="w-full">
-          <div
-            class="bg-[#B5EA72] rounded-full h-56 w-56 flex justify-center items-center"
-          >
-            <h2 class="text-4xl text-[#3a50b3] font-bold text-center">
-              Innovative
-            </h2>
+      <div class="opacity-0" id="features-details">
+        <div class="flex w-full justify-center items-center">
+          <div class="w-full">
+            <div
+              class="bg-[#B5EA72] rounded-full h-56 w-56 flex justify-center items-center"
+            >
+              <h2 class="text-4xl text-[#3a50b3] font-bold text-center">
+                Innovative
+              </h2>
+            </div>
+          </div>
+          <div class="slide-in-right">
+            <ul class="list-disc">
+              <li class="text-xl">
+                Sealed individual pods ensure safety and security with no risk
+                of contamination from dirt and germs
+              </li>
+              <li class="text-xl">
+                Unique no-leak design means the single-use cloths never dry out
+                and are always fresh and moist every single time
+              </li>
+              <li class="text-xl">
+                Cloths are fully biodegradable, and the pods are recyclable
+              </li>
+            </ul>
           </div>
         </div>
-        <div class="" id="features-details">
-          <ul class="list-disc">
-            <li class="text-xl">
-              Sealed individual pods ensure safety and security with no risk of
-              contamination from dirt and germs
-            </li>
-            <li class="text-xl">
-              Unique no-leak design means the single-use cloths never dry out
-              and are always fresh and moist every single time
-            </li>
-            <li class="text-xl">
-              Cloths are fully biodegradable, and the pods are recyclable
-            </li>
-          </ul>
-        </div>
-      </div>
 
-      <div class="flex w-full justify-between items-center pt-16">
-        <div class="w-full">
-          <ul class="list-disc">
-            <li class="text-xl">
-              No alcohol, no chemicals, no colour additives
-            </li>
-            <li class="text-xl">
-              Complies with health and safety regulations 
-            </li>
-            <li class="text-xl">
-              Natural and pure, dermatologically tested, hypoallergenic liquid
-              soap 
-            </li>
-            <li class="text-xl">
-              Gentle and moisturizing on hands and safe for all
-            </li>
-            <li class="text-xl">
-              Hand-woven cellulose cloth hand wipes are soft to the touch yet
-              strong and sturdy for a complete clean-up 
-            </li>
-          </ul>
-        </div>
-        <div class="w-full flex justify-end">
-          <div
-            class="text-4xl text-[#3a50b3] font-bold bg-[#97CAEB] rounded-full h-56 w-56 text-right flex text-nowrap justify-end items-center"
-          >
-            <h2>Skin-safe <br />Cleaning Solution</h2>
+        <div class="flex w-full justify-between items-center pt-16">
+          <div class="w-full slide-in-left" >
+            <ul class="list-disc">
+              <li class="text-xl">
+                No alcohol, no chemicals, no colour additives
+              </li>
+              <li class="text-xl">
+                Complies with health and safety regulations 
+              </li>
+              <li class="text-xl">
+                Natural and pure, dermatologically tested, hypoallergenic liquid
+                soap 
+              </li>
+              <li class="text-xl">
+                Gentle and moisturizing on hands and safe for all
+              </li>
+              <li class="text-xl">
+                Hand-woven cellulose cloth hand wipes are soft to the touch yet
+                strong and sturdy for a complete clean-up 
+              </li>
+            </ul>
+          </div>
+          <div class="w-full flex justify-end">
+            <div
+              class="text-4xl text-[#3a50b3] font-bold bg-[#97CAEB] rounded-full h-56 w-56 text-right flex text-nowrap justify-end items-center"
+            >
+              <h2>Skin-safe <br />Cleaning Solution</h2>
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="flex w-full justify-center items-center pt-16">
-        <div class="w-full">
-          <div
-            class="text-4xl text-[#3a50b3] font-bold bg-[#B5EA72] rounded-full h-56 w-56 text-left flex justify-start items-center"
-          >
-            <h2>Environmentally Friendly</h2>
+        <div class="flex w-full justify-center items-center pt-16">
+          <div class="w-full">
+            <div
+              class="text-4xl text-[#3a50b3] font-bold bg-[#B5EA72] rounded-full h-56 w-56 text-left flex justify-start items-center"
+            >
+              <h2>Environmentally Friendly</h2>
+            </div>
+          </div>
+          <div class="slide-in-right">
+            <ul class="list-disc">
+              <li class="text-xl">
+                Cloth hand wipes are botanic and biodegradable
+              </li>
+              <li class="text-xl">
+                Pods are made from PP5 plastic and are 100% recyclable
+              </li>
+              <li class="text-xl">
+                Saves Water. Wicked Wipes use only about 5 ml. of cleansing
+                fluid per pod.
+              </li>
+            </ul>
           </div>
         </div>
-        <div>
-          <ul class="list-disc">
-            <li class="text-xl">
-              Cloth hand wipes are botanic and biodegradable
-            </li>
-            <li class="text-xl">
-              Pods are made from PP5 plastic and are 100% recyclable
-            </li>
-            <li class="text-xl">
-              Saves Water. Wicked Wipes use only about 5 ml. of cleansing fluid
-              per pod.
-            </li>
-          </ul>
-        </div>
-      </div>
 
-      <div class="flex w-full justify-between items-center pt-16">
-        <div class="w-full flex flex-col">
-          <ul class="list-disc">
-            <li class="text-xl">Cool, Lemon, Green Tea, Unscented</li>
-          </ul>
-          <div class="flex gap-2">
-            <img src="./public/green 5.svg" alt="" />
-            <img src="./public/green 6.svg" alt="" />
-            <img src="./public/yellow 3.svg" alt="" />
-            <img src="./public/blue 2.svg" alt="" />
-            <img src="./public/white 3.svg" alt="" />
+        <div class="flex w-full justify-between items-center pt-16">
+          <div class="w-full flex flex-col">
+            <ul class="list-disc">
+              <li class="text-xl">Cool, Lemon, Green Tea, Unscented</li>
+            </ul>
+            <div class="flex gap-2">
+              <img src="./public/green 5.svg" alt="" />
+              <img src="./public/green 6.svg" alt="" />
+              <img src="./public/yellow 3.svg" alt="" />
+              <img src="./public/blue 2.svg" alt="" />
+              <img src="./public/white 3.svg" alt="" />
+            </div>
           </div>
-        </div>
-        <div class="w-full flex justify-end">
-          <div
-            class="text-4xl text-[#3a50b3] font-bold bg-[#B5EA72] rounded-full h-48 w-48 text-right flex text-nowrap justify-end items-center"
-          >
-            <h2>Natural <br />Fragrances</h2>
+          <div class="w-full flex justify-end">
+            <div
+              class="text-4xl text-[#3a50b3] font-bold bg-[#B5EA72] rounded-full h-48 w-48 text-right flex text-nowrap justify-end items-center"
+            >
+              <h2>Natural <br />Fragrances</h2>
+            </div>
           </div>
         </div>
       </div>
@@ -564,7 +568,8 @@
         designHeading.classList.add("text-[#3A50B3]");
       });
       features.addEventListener("mouseover", function () {
-        featuresDetails.classList.add("slide-in-right");
+        featuresDetails.classList.remove("opacity-0");
+        featuresDetails.classList.add("opacity-100");
       });
     </script>
     <script>
